# specedge

./: .gitignore  LICENSE  README.md  pyproject.toml  specedge.proto
config/: auto_batch.example.yaml  server_only.example.yaml  specedge.example.yaml
script/: auto_batch.sh  batch_server.sh  client.sh  client_host.sh  compile_proto.sh  server_only.sh
src/: config.py  log.py  util.py
src/metric/: __init__.py  auto_batch.py  layer_split.py  server_only.py  specedge.py
src/model/: cache.py  layer_split.py  llama.py  qwen3.py
src/script/: auto_batch.py  batch_server.py  client.py  client_host.py  layer_split_head.py  layer_split_tail.py  server_only.py
src/specedge/: tree.py
src/specedge/client/: proactive.py  specexec.py
src/specedge/engine/: graph.py
src/specedge/network/: grpc.py
src/specedge_grpc/: specedge_pb2.py  specedge_pb2.pyi  specedge_pb2_grpc.py
src/strategy/: request_manager.py
src/strategy/edge_draft/: specexec.py
src/strategy/edge_verify/: specexec.py
src/strategy/server_verify/specexec/: grpc.py  server_only.py
