[project]
name = "specedge"
version = "1.0.0"
description = "SpecEdge supplementary repository"
readme = "README.md"
authors = [
    { name = "Jinwoo Park" },
    { name = "Seunggeun Cho", email = "git@sgncho.com" },
    { name = "Dongsu Han" }
]
license = "MIT"
requires-python = "~=3.14.0"
dependencies = [
    "accelerate~=1.10.0",
    "blobfile~=3.1.0",
    "fastchat>=0.1.0",
    "grpcio~=1.75.0",
    "matplotlib~=3.10.0",
    "plotly~=6.3.0",
    "polars~=1.34.0",
    "rich~=14.2.0",
    "sentencepiece~=0.2.0",
    "tiktoken~=0.12.0",
    "torch~=2.9.0",
    "transformers~=4.57.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["grpcio-tools~=1.75.0"]

[tool.pyright]
ignore = [
    "src/specedge_grpc/*"
]

[tool.ruff]
exclude = [
    "src/specedge_grpc/"
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle Error
    "W",   # pycodestyle Warning
    "F",   # pyflakes
    "S",   # flake8 bandit
    "LOG", # flake8 logging
    "G",   # flake8 logging format
    "Q",   # flake8 quotes
    "A",   # flake8 builtins
    "B",   # flake8 bugbear
    "C4",  # flake8 comprehensions
    "PLE", # pylint
    "PLW", # pylint
    "I",   # isort
    "RUF", # ruff specific
]

[tool.ruff.format]
quote-style = "double"
